--- a/html/index.html
+++ b/html/index.html
@@ -87,7 +87,7 @@
           .hide(); // Hide it initially
        });
 
-      var socket = io.connect('http://twilipop.nodejitsu.com')
+      var socket = io.connect()
         , callMade = false;
 
       function initPlayerWithCall(number, time){
